[project]
name = "stelarc"
version = "0.1.0"
description = "Biologically inspired, memory-driven vision RL agent"
authors = [
    { name = "Petr Kuderov", email = "pkuderov@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy >=1.23, <2.0",
    "numba >=0.57",
    "torch >=2.0",
    "gymnasium >=1.1",
    "matplotlib",
    "wandb"
]

[project.optional-dependencies]
dev = [
    "jupyterlab"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
