[project]
name = "stelarc"
version = "0.1.0"
description = "Biologically inspired, memory-driven vision RL agent"
authors = [
    { name = "Petr Kuderov", email = "pkuderov@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy >=1.23",
    "numba >=0.57",
    "torch >=2.0",
    "gymnasium[box2d,array-api] >=1.1",
    "matplotlib",
    "wandb",

]

[project.optional-dependencies]
dev = [
    "jupyterlab"
]

[tool.uv]
# swig is required for gymnasium[box2d]
# you can install swig manually before main installation:
#   uv tool install swig
dev-dependencies = ["swig"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
